--- a/eShopOnWeb-master/src/Web/appsettings.json
+++ b/eShopOnWeb-master/src/Web/appsettings.json
@@ -1,8 +1,10 @@
 ﻿{
-  "ConnectionStrings": {
-    "CatalogConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.CatalogDb;",
-    "IdentityConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=Microsoft.eShopOnWeb.Identity;"
-  },
+    "ConnectionStrings": {
+        "CatalogConnection": "Server=LT-LIT-SC-0022\\SQLEXPRESS;Integrated Security=true;Initial Catalog=TeamCity;",
+        //"IdentityConnection": "Server=LT-LIT-SC-0022\\SQLEXPRESS;Integrated Security=true;Initial Catalog=TeamCity;",
+        "IdentityConnection": "Server=LT-LIT-SC-0022\\SQLEXPRESS;Integrated Security=false;Initial Catalog=TeamCity;User id=TeamCity;Password=Labaslabas123;"
+       
+    },
   "CatalogBaseUrl": "",
   "Logging": {
     "IncludeScopes": false,
