--- a/eShopOnWeb-master/src/Web/Web.csproj
+++ b/eShopOnWeb-master/src/Web/Web.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>Microsoft.eShopWeb.Web</RootNamespace>
+    <StartupObject></StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
